# insyte

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  pyproject.toml
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  PUBLISHING.md  QUICKSTART.md  mcp.md
examples/: config.example.yaml
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: build_macos_dmg.sh
src/insyte/: __init__.py  desktop.py  exceptions.py  logging_config.py  main.py
src/insyte/agents/: __init__.py  analyst.py  critic.py  planner.py  quality.py  report.py  schemas.py
src/insyte/analytics/: __init__.py  charts.py  comparison.py  engine.py  forecast.py  models.py  periods.py  report.py  segmentation.py
src/insyte/cli/: _project.py  _stubs.py  analyze_command.py  app.py  chat_command.py  connect_command.py  doctor_command.py  history_command.py  init_command.py  mcp_command.py  metrics_command.py  profile_command.py  query_command.py  scan_command.py  schema_command.py  semantic_command.py  status_command.py  studio_command.py  sync_command.py
src/insyte/config/: __init__.py  loader.py  models.py  paths.py  secrets.py
src/insyte/connectors/: __init__.py  base.py  duckdb.py  factory.py  postgres.py
src/insyte/mcp/: __init__.py  installer.py  server.py  tools.py
src/insyte/metadata/: __init__.py  classifier.py  models.py  pii_detector.py  profiler.py  relationship_detector.py  repository.py  scanner.py
src/insyte/nl/: __init__.py  llm.py  periods.py  report_skill.md  router.py
src/insyte/query/: __init__.py  cost_guard.py  executor.py  generator.py  models.py  validator.py
src/insyte/semantic/: __init__.py  catalog.py  generator.py  models.py  proposals.py  qualifiers.py  questions.py  repository.py  validator.py
src/insyte/services/: __init__.py  analysis_service.py  conversation_service.py  export_service.py  history_service.py  metric_service.py  pdf_service.py  (+5 more)
tests/: conftest.py
tests/fixtures/: ecommerce.sql  semantic.yaml
tests/integration/: .gitkeep  helpers.py  test_analytics.py  test_postgres_connection.py  test_profiling.py  test_query_execution.py  test_scan.py  test_studio.py  test_sync.py
tests/security/: .gitkeep  test_sql_injection.py
tests/unit/: test_agents.py  test_analytics_engine.py  test_analytics_helpers.py  test_analyze_metrics_commands.py  test_audit_repository.py  test_chat_controller.py  test_classifier.py  test_cli.py  test_config_models.py  test_connect_command.py  test_cost_guard.py  test_desktop.py  test_forecast.py  test_generator.py  test_intent.py  test_investigation.py  test_loader.py  test_logging.py  test_mcp_installer.py  test_mcp_server.py  test_mcp_service.py  test_metadata_repository.py  test_model_router.py  test_nl_llm.py  test_nl_periods.py  test_paths.py  test_periods.py  test_pii_detector.py  test_postgres_connector.py  test_profile_semantic_commands.py  test_profiler.py  test_provider_auth_service.py  test_query_executor.py  test_query_history_commands.py  test_query_validator.py  test_relationship_detector.py  test_report_context.py  test_report_llm.py  test_scan_schema_commands.py  test_scanner_filters.py  (+14 more)
(+43 files in other folders)
