
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insyte"
version = "0.2.9"
description = "Local-first AI analytics for PostgreSQL — natural-language questions, validated read-only SQL, credentials never exposed to the model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Insyte contributors" }]
keywords = ["analytics", "postgresql", "ai", "mcp", "sql", "cli", "duckdb", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Milestone 2 — safe read-only PostgreSQL connection.
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    # Milestone 4 — safe SQL parsing and validation.
    "sqlglot>=25.0",
    # Milestone 5 — terminal charts for analytics.
    "plotext>=5.2",
    # Milestone 6 — interactive terminal UI.
    "textual>=0.60",
    # Milestone 7 — MCP server and client installers.
    "mcp>=1.2",
    "tomli-w>=1.0",
    # Milestone 9 — DuckDB analytical copy and extraction.
    "duckdb>=1.0",
    "duckdb-engine>=0.13",
    "pyarrow>=16.0",
    "polars>=1.0",
    # Milestone 10 — Insyte Studio (browser workspace).
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
insyte = "insyte.main:main"

[project.urls]
Homepage = "https://github.com/insyte-ai/insyte"
Repository = "https://github.com/insyte-ai/insyte"
Issues = "https://github.com/insyte-ai/insyte/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insyte"]
# Ship the compiled Studio frontend in the wheel (users need no Node.js). The tracked
# index.html is included via the package tree; this also captures the Vite-built assets/,
# which are build output and may be gitignored.
artifacts = ["src/insyte/studio_dist/assets/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer and FastAPI rely on function-call defaults (Option / Argument / Depends).
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
